syntax = "proto3";
option csharp_namespace = "TicketingAppBackEnd.Protos";


message CustomOperationReply{
  int32 code = 1;
  string message = 2;
}

